# cmake

./: README.md  add_executable.cmake  project_template.cmake
backup/: boost.cmake  dspatch.cmake  eigen.cmake  filesystem.cmake  onetbb.cmake  opencv.cmake
template/: CMakeLists.txt
